[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-chatbot"
version = "1.0.0"
description = "A lightweight Streamlit medical chatbot using Hugging Face models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

# For Vercel/traditional deployments
[tool.setuptools]
packages = []

[tool.setuptools.entry-points.console_scripts]
medical-chatbot = "streamlit.cli:main"
